syntax = "proto3";

package com.protos.learn;

option java_package = "com.protos.learn.sid";
option java_multiple_files=true;

import "test_laptop_message.proto";

message CreateLaptopRequest{
  Laptop laptop = 1;
}

message CreateLaptopResponse{
  string id = 2;
}

service LaptopService{
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){};
}